--- a/index.html
+++ b/index.html
@@ -6685,7 +6685,7 @@
                                             <div id=tdi_105 class="td_block_inner td-fix-index">
                                                 <div class="menu">
                                                     <ul>
-                                                        <li class="page_item page-item-257"><a href="/sonjuur-uurchlult-co_aaf1.htmlabout-us" style="color:black">About us</a>
+                                                        <li class="page_item page-item-257" style="color:black;"><a href="/sonjuur-uurchlult-co_aaf1.htmlabout-us" >About us</a>
                                                         </li>
                                                         <li class="page_item page-item-265"><a href="/sonjuur-uurchlult-co_aaf1.htmlcontact-us">Contact us</a>
                                                         </li>
