--- a/index.html
+++ b/index.html
@@ -7124,7 +7124,7 @@
     }
                                             </style>
                                             <div class="tdm-social-wrapper tds-social1 tdi_120">
-                                                <div class="tdm-social-item-wrap"><a href="#" title="Facebook" class="tdm-social-item"><i class="td-icon-font td-icon-facebook"></i></a><a href="#" class="tdm-social-text">Facebook</a>
+                                                <div class="tdm-social-item-wrap"><a href="#" title="Facebook" class="tdm-social-item"><i class="td-icon-font td-icon-facebook"></i></a><a href="#" class="tdm-social-text" style="color:black;">Facebook</a>
                                                 </div>
                                                 <div class="tdm-social-item-wrap"><a href="#" title="Flickr" class="tdm-social-item"><i class="td-icon-font td-icon-flickr"></i></a><a href="#" class="tdm-social-text">Flickr</a>
                                                 </div>
